# rasa

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
agents-samples/agent/: docker-compose.yml
agents-samples/agent-20240411/: docker-compose.yml
agents-samples/agent-20240411/.config/rasa/: global.yml
agents-samples/agent-20240411/.defaults/: config.yml  private.dev.yaml  private.gke.yaml  private.yaml  public.yaml
agents-samples/agent-20240411/config/: config.yml
agents-samples/agent-20240412/: docker-compose.yml
agents-samples/agent-20240412/admin/private/defaults/: config.yml  private.dev.yaml  private.yaml  public.yaml
agents-samples/agent-20240412/rasa/config/: config.yml  domain.yml
agents-samples/agent/config/rasa/: global.yml
data/0-developers-notes/: lonycell-todo.md
docker/: Dockerfile.base  Dockerfile.base-builder  Dockerfile.botfront  Dockerfile.dialog-ai  Dockerfile.dialog-ai-20240411  Dockerfile.pretrained_embeddings_spacy_ko  Dockerfile.rasa-addons  Dockerfile.rasa-core  docker-bake.hcl
docker/configs/: config_pretrained_embeddings_spacy_ko.yml
rasa/: server.py
rasa-3.7.0a1/: server.py
rasa-3.7.0a1/core/channels/: channel.py
rasa-3.7.0a1/shared/utils/: validation.py
rasa-3.7.0a1/utils/: botfront.py
rasa/cli/: run.py
rasa/shared/: constants.py
rasa/shared/core/: domain.py
rasa/utils/: botfront.py
rasa/utils/tensorflow/: model_data.py
rasa_addons/: pyproject.toml  setup.py
rasa_addons/core/channels/: webchat.py
rasa_addons/importers/: botfront.py
rasa_addons/nlu/components/: gazette.py
(+5 files in other folders)
